# KR580

./: 580.580  AUDIT-FEEDBACK.md  CHANGELOG.md  Cargo.toml  LICENSE  README-EN.md  README.md  counter_loop.580  flake.nix  square.580  squareleg.580  test_16bit_addresses.txt  test_8bit_data.txt  test_ports.txt  test_program.580
crates/app/: Cargo.toml
crates/app/src/: actor.rs  command.rs  emulator.rs  error.rs  lib.rs
crates/app/src/emulator/: mod.rs  tick.rs
crates/app/tests/: app_commands.rs  monitor_text_geometry.rs  network_commands.rs  printer_commands.rs  square_program.rs  storage_commands.rs
crates/core/: Cargo.toml
crates/core/src/: bus.rs  command.rs  decode.rs  error.rs  execute.rs  flags.rs  lib.rs  machine_cycle.rs  memory.rs  registers.rs  state.rs  tact.rs  timing.rs
crates/core/src/machine_cycle/: mod.rs  tables.rs  tests.rs
crates/core/src/ops/: alu.rs  control.rs  data.rs  misc.rs  mod.rs  operand.rs  stack.rs
crates/core/tests/: bug_regression.rs  cpu_semantics.rs  last_bus_residue.rs  memory_block.rs  tact_execution.rs  wz_residue.rs
crates/persistence/: Cargo.toml
crates/persistence/examples/: gen_counter_loop_snapshot.rs  make_test_snapshot.rs  verify_test_snapshot.rs
crates/persistence/src/: error.rs  export.rs  import.rs  lib.rs  program.rs  settings.rs  snapshot.rs  subprogram.rs
crates/persistence/src/export/: xlsx.rs
crates/persistence/tests/: export_options.rs  persistence_formats.rs
crates/ui/: Cargo.toml  build.rs
crates/ui/src/: app.rs  file_assoc.rs  install_mode.rs  lib.rs  main.rs  platform.rs  runtime.rs  settings_storage.rs  system_locale.rs  view.rs
crates/ui/src/app/: constants.rs  export_modal.rs  export_modal_state.rs  export_modal_targets.rs  export_modal_tests.rs  handlers.rs  handlers_tests.rs  help.rs  help_routing.rs  hex_stream_filter.rs  import_modal.rs  import_modal_state.rs  import_modal_tests.rs  keymap.rs  menu_keyboard.rs  messages.rs  mod.rs  modal.rs  network.rs  opcode_picker.rs  printer.rs  register_inline.rs  settings_saved_notice.rs  shortcuts.rs  speed.rs  state.rs  state_helpers.rs  status.rs  subscription.rs  undo.rs  update.rs  update_overlays.rs  update_routes.rs  update_settings.rs  window_tests.rs  windows.rs
crates/ui/src/app/help/: dialog.rs  markdown.rs  search.rs  tests.rs
crates/ui/src/app/menu_keyboard/: tests.rs
crates/ui/src/app/printer/: dialog.rs  properties.rs  tasks.rs  tests.rs  window.rs
crates/ui/src/app/settings_modal/: dialog.rs  focus.rs  mod.rs  routing.rs  tests.rs
crates/ui/src/app/status/: tests.rs
crates/ui/src/app/undo/: tests.rs
crates/ui/src/app/update_settings/: mod.rs  network.rs  section.rs  shortcuts.rs  storage.rs
crates/ui/src/app/windows/: events.rs
crates/ui/src/backend/: actor.rs  command.rs  error.rs  mod.rs
crates/ui/src/backend/emulator/: mod.rs  tick.rs
crates/ui/src/devices/: error.rs  iobus.rs  mod.rs  monitor.rs  network.rs  oem.rs  printer.rs  status.rs  storage.rs
crates/ui/src/devices/printer/: native.rs  pdf.rs  properties.rs  text.rs
crates/ui/src/file_assoc/: linux.rs  macos.rs  windows.rs
crates/ui/src/i18n/: en.rs  help_en.rs  help_ru.rs  keys.rs  mod.rs  network.rs  printer.rs  ru.rs  view.rs
crates/ui/src/i18n/en/: devices.rs  settings.rs
crates/ui/src/i18n/ru/: devices.rs  settings.rs
crates/ui/src/persistence/: error.rs  export.rs  import.rs  mod.rs  settings.rs  shortcuts.rs
crates/ui/src/persistence/export/: xlsx.rs
crates/ui/src/runtime/: dispatch.rs  events.rs  files.rs  focus.rs  focus_ops.rs  humanize_error.rs  memory.rs  mod.rs  parse.rs  register.rs  replacement.rs  storage_files.rs  undo.rs
crates/ui/src/runtime/memory/: cursor.rs  editor.rs  mod.rs  search.rs  step.rs
crates/ui/src/view/: about.rs  chips.rs  current_command.rs  cycles.rs  editors.rs  font_warmup.rs  icons.rs  lamps.rs  memory_list.rs  menu.rs  menu_dropdowns.rs  menu_labels.rs  mod.rs  modal.rs  monitor_font.rs  monitor_image.rs  mux.rs  network.rs  network_settings.rs  notices.rs  opcode_dropdown.rs  printer.rs  printer_setup.rs  schematic.rs  speed.rs  status_register.rs  storage.rs  theme.rs  tooltips.rs  utils.rs  widgets.rs  windows.rs
crates/ui/src/view/export_modal/: controls.rs  groups.rs  local_icons.rs  mod.rs  styles.rs  target.rs
crates/ui/src/view/help/: consts.rs  content.rs  mod.rs  sidebar.rs  styles.rs
crates/ui/src/view/import_modal/: controls.rs  controls_tests.rs  mod.rs  styles.rs
crates/ui/src/view/memory_list/: cells.rs  mod.rs  operands.rs  scrollbar.rs
crates/ui/src/view/monitor/: canvas.rs  hex_popup.rs  mod.rs  sections.rs  styles.rs
crates/ui/src/view/printer_setup/: dropdown.rs  labels.rs  properties.rs  sections.rs  (+1 more)
crates/ui/tests/: app_commands.rs  device_bus.rs  export_options.rs  monitor_text_geometry.rs  native_printer_properties.rs  network_commands.rs  persistence_formats.rs  printer_commands.rs  square_program.rs  storage_commands.rs
kr580/: Cargo.toml
kr580/crates/kr580-app/: Cargo.toml
kr580/crates/kr580-app/src/: main.rs
kr580/crates/kr580-core/: Cargo.toml
kr580/crates/kr580-core/src/: commands.rs  decode.rs  error.rs  execute.rs  flags.rs  interrupt.rs  io.rs  lib.rs  memory.rs  state.rs  timing.rs
kr580/crates/kr580-devices/: Cargo.toml
kr580/crates/kr580-devices/src/: bus.rs  error.rs  lib.rs  monitor.rs  network.rs  printer.rs  storage.rs
kr580/crates/kr580-integration-tests/: Cargo.toml
kr580/crates/kr580-integration-tests/src/: lib.rs
kr580/crates/kr580-integration-tests/tests/: device_routing.rs  opcode_coverage.rs  snapshot_roundtrip.rs
kr580/crates/kr580-persistence/: Cargo.toml
kr580/crates/kr580-persistence/src/: error.rs  export.rs  lib.rs  settings.rs  snapshot.rs  subprogram.rs
kr580/crates/kr580-ui/: Cargo.toml
kr580/crates/kr580-ui/src/: lib.rs  runtime.rs  view.rs
kr580/docs/: README.md  architecture.md  limitations.md  testing.md
kr580/docs/cpu/: README.md  flags.md  interrupts.md  opcodes.md  timing.md
kr580/docs/devices/: README.md  monitor.md
kr580/docs/persistence/: README.md
kr580/docs/ui/: README.md
(+178 files in other folders)
