[workspace]
members = [
    "crates/core",
    "crates/ui",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "1.0.0"
rust-version = "1.95"
repository = "https://github.com/WhoSowSee/KR580"
homepage = "https://github.com/WhoSowSee/KR580"
readme = "README-EN.md"
keywords = ["emulator", "8080", "kr580", "desktop"]
categories = ["emulators"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "fs", "sync"] }
crossbeam-channel = "0.5"
iced = { version = "0.14.0", features = ["tokio"] }
rfd = "0.15"
png = "0.17"
image = "0.25"
printpdf = { version = "0.9.1", default-features = false, features = ["text_layout"] }
rust_xlsxwriter = "0.92"
calamine = "0.35"
