[workspace]
resolver = "2"
members = [
    "crates/kr580-core",
    "crates/kr580-persistence",
    "crates/kr580-devices",
    "crates/kr580-ui",
    "crates/kr580-app",
    "crates/kr580-integration-tests",
]
default-members = ["crates/kr580-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["KR580 modern emulator"]
publish = false

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs"] }
crossbeam-channel = "0.5"
rfd = "0.14"
iced = { version = "0.12", features = ["tokio"] }
anyhow = "1.0"

# Internal crates
kr580-core = { path = "crates/kr580-core" }
kr580-persistence = { path = "crates/kr580-persistence" }
kr580-devices = { path = "crates/kr580-devices" }
kr580-ui = { path = "crates/kr580-ui" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false

[profile.dev]
opt-level = 0
debug = true
