[package]
name = "k580-app"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
k580-core = { path = "../core" }
k580-devices = { path = "../devices" }
k580-persistence = { path = "../persistence" }
crossbeam-channel.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
