[package]
name = "k580-core"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
description = "KR580VM80 / Intel 8080 CPU core for KR580."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
