[package]
name = "k580-ui"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
k580-app = { path = "../app" }
k580-core = { path = "../core" }
k580-persistence = { path = "../persistence" }
iced = { workspace = true, features = ["image", "svg", "canvas", "advanced"] }
rfd.workspace = true
png.workspace = true
image.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[[bin]]
name = "k580"
path = "src/main.rs"
