[package]
name = "kr580"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
description = "Desktop KR580VM80 / Intel 8080 emulator."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"
default-run = "kr"
exclude = [
    "assets/icons/icon.png",
    "assets/icons/file-580.png",
    "assets/icons/installer-setup.png",
    "assets/icons/installer-uninstall.png",
]

[dependencies]
k580-core = { version = "1.0.0", path = "../core" }
crossbeam-channel.workspace = true
thiserror.workspace = true
tokio.workspace = true
printpdf.workspace = true
rust_xlsxwriter.workspace = true
calamine.workspace = true
iced = { workspace = true, features = ["image", "svg", "canvas", "advanced"] }
rfd.workspace = true
png.workspace = true
image.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[lib]
name = "k580_ui"
path = "src/lib.rs"

[[bin]]
name = "k580"
path = "src/main.rs"

[[bin]]
name = "kr"
path = "src/bin/kr.rs"

[[bin]]
name = "k580-installer"
path = "src/bin/k580-installer.rs"

[[bin]]
name = "k580-uninstaller"
path = "src/bin/k580-uninstaller.rs"
