[package]
name = "kr580-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Top-level KR580 emulator binary."

[[bin]]
name = "kr580"
path = "src/main.rs"

[dependencies]
kr580-core = { workspace = true }
kr580-persistence = { workspace = true }
kr580-devices = { workspace = true }
kr580-ui = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
iced = { workspace = true }
