[package]
name = "kr580-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure deterministic Intel 8080 / KR580VM80 CPU core."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
