[package]
name = "kr580-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Versioned snapshot, subprogram, and settings persistence for KR580 emulator."

[dependencies]
kr580-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
