[package]
name = "kr580-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "iced-based view layer for the KR580 emulator."

[dependencies]
kr580-core = { workspace = true }
kr580-persistence = { workspace = true }
kr580-devices = { workspace = true }
iced = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
rfd = { workspace = true }
